postgresql-common (101) UNRELEASED; urgency=low

  * debian/supported-versions: Only support 8.4 in Ubuntu 9.10. (LP: #403381)
  * PgCommon.pm, change_ugid(): Fix taint error. (LP: #403693)
  * Update Swedish debconf translations, thanks Martin Bagge!
    (Closes: #539216)

 -- Martin Pitt <mpitt@debian.org>  Thu, 23 Jul 2009 11:25:08 +0200

postgresql-common (100) unstable; urgency=low

  * t/005_PgCommon.t: Add test case for read_conf_file() for configuration
    files with an include directive. This reproduces #535428.
  * PgCommon.pm, read_conf_file(): Correctly handle includes.
    (Closes: #535428)
  * PgCommon.pm: Check environment variable $PG_CLUSTER_CONF_ROOT for an
    alternative configuration root (default: /etc/postgresql/). For
    testing/development purposes you can change this to point to e. g. your
    home directory, so that you can use the postgresql-common tools without
    root privileges. Thanks to Aidan Van Dyk for the suggestion and patch!
  * pg_createcluster: If calling as non-root user, default to effective user
    id for owneruid instead of root. This makes using $PG_CLUSTER_CONF_ROOT
    more convenient.
  * pg_wrapper: Document PG_CLUSTER_CONF_ROOT in the POD.
  * debian/control: Add missing ${misc:Depends}.
  * debian/control: Bump Standards-Version to 3.8.2; no changes necessary.

 -- Martin Pitt <mpitt@debian.org>  Sun, 05 Jul 2009 22:57:11 +0200

postgresql-common (99) unstable; urgency=low

  * Update Czech debconf translations, thanks Miroslav Kure.
    (Closes: #534794)
  * PgCommon.pm, cluster_info(): Do not set a default log file if the cluster
    uses syslog for logging. Thanks Antti Merenluoto!
  * debian/supported-versions: Add Ubuntu 9.10.
  * t/030_errors.t: Fix "invalid pg_hba.conf" test for translated PostgreSQL
    error message.

 -- Martin Pitt <mpitt@debian.org>  Sun, 28 Jun 2009 21:38:08 +0200

postgresql-common (98) unstable; urgency=low
