@@ -94,11 +94,11 @@ unlike_program_out 'postgres', "psql -Atl --cluster $MAJORS[-1]/localhost:5440",
     qr/test\|postgres\|/, "test db does not appear in cluster $MAJORS[-1]/localhost:5440";
 
 # check some erroneous cluster specifications
-like_program_out 'postgres', "psql -Atl --cluster $MAJORS[-1]/localhost:5435", 2, 
+like_program_out 'postgres', "LC_MESSAGES=C psql -Atl --cluster $MAJORS[-1]/localhost:5435", 2, 
     qr/could not connect/, "psql --cluster $MAJORS[-1]/localhost:5435 fails due to nonexisting port";
-like_program_out 'postgres', "psql -Atl --cluster $MAJORS[-1]/localhost:a", 1, 
+like_program_out 'postgres', "LC_MESSAGES=C psql -Atl --cluster $MAJORS[-1]/localhost:a", 1, 
     qr/Specified cluster does not exist/, "psql --cluster $MAJORS[-1]/localhost:a fails due to invalid syntax";
-like_program_out 'postgres', "psql -Atl --cluster $MAJORS[-1]/doesnotexi.st", 1, 
+like_program_out 'postgres', "LC_MESSAGES=C psql -Atl --cluster $MAJORS[-1]/doesnotexi.st", 1, 
     qr/Specified cluster does not exist/, "psql --cluster $MAJORS[-1]/doesnotexi.st fails due to invalid syntax";
 like_program_out 'postgres', "psql -Atl --cluster 6.4/localhost:", 1, 
     qr/Invalid version/, "psql --cluster 6.4/localhost: fails due to invalid version";
@@ -124,7 +124,7 @@ $ENV{'PGCLUSTER'} = "$MAJORS[-1]/localhost:5440";
 unlike_program_out 'postgres', 'psql -Atl', 0, 
     qr/test\|postgres\|/, 'PGCLUSTER network cluster selection (3)';
 $ENV{'PGCLUSTER'} = "$MAJORS[-1]/localhost:5435";
-like_program_out 'postgres', 'psql -Atl', 2, 
+like_program_out 'postgres', 'LC_MESSAGES=C psql -Atl', 2, 
     qr/could not connect/, "psql --cluster $MAJORS[-1]/localhost:5435 fails due to nonexisting port";
 delete $ENV{'PGCLUSTER'};
 
