@@ -4,6 +4,8 @@ postgresql-common (101) UNRELEASED; urgency=low
   * PgCommon.pm, change_ugid(): Fix taint error. (LP: #403693)
   * Update Swedish debconf translations, thanks Martin Bagge!
     (Closes: #539216)
+  * t/090_multicluster.t: Run psql error tests under LC_MESSAGES=C to not fail
+    under non-English locales.
 
  -- Martin Pitt <mpitt@debian.org>  Thu, 23 Jul 2009 11:25:08 +0200
 
